--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ var num=document.querySelector("#sad").value;
 	  
 	if(num=="Tasnim")
 	{
-	  document.write("<font size=10px color=red><b>love you baby💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚 ummmmmmah</b></font>");
+	  document.write("<font size=10px color=red><b>💝💝💝💝💝💝💝💝💝💝💝💝💝💝💝💝💝💝💝💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💝💝💝💝💝💝💝💝💝💝💝💝💝💜💜💜💜💜💜💜💜💜💜💜💜💜💜💜💜💜💜💜💜💜💜💜💜💙💙💙💙💙💙💙💙💙💙💙💙💙💙💙💙💙💓💓💓💓💓💓💓💓💓💓💓💞💞💞💞💞💞💞💞💞💞💞💞💞💞💞💗💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💛💛💛💛💛💛💛💛💛💛💛💛💛💛💛💛💛💛💛💛💛💛💛💛🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡🧡❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💞💞💞💞💞💞💞💞💞💞💞💞💞💞💞💞💞💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚love you baby💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚💚 ummmmmmah</b></font>");
 	}
 	  else
 	  {
@@ -135,9 +135,9 @@ var num=document.querySelector("#sad").value;
 	  
 	  
 	  
-             <span>Developer: Md:Asad Islam
-	         by Mobile Phone
-        Developed with HTML,CSS,JavaScript</span></pre>
+                  <span>Developer: Md:Asad Islam
+	              by Mobile Phone
+             Developed with HTML,CSS,JavaScript</span></pre>
 	  
 	  
 	  
