--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   
   
 </head>
-<body bgcolor=#ffccff>
+<body bgcolor="#ffccff" background="tasnimbou.jpeg">
 
 <marquee>wellcome</marquee><br>
 	<div id="kal">
